<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hegel.screenrecorder.MainActivity" >

    
    <Button
        android:id="@+id/btn_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/query_all" />
    
    <Button
        android:id="@+id/btn_screen_on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_all"
        android:layout_marginTop="20dp"
        android:text="@string/query_screen_on" />

    <Button
        android:id="@+id/btn_screen_off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_screen_on"
        android:layout_marginTop="20dp"
        android:text="@string/query_screen_off" />

    <Button
        android:id="@+id/btn_screen_unlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_screen_off"
        android:layout_marginTop="20dp"
        android:text="@string/query_screen_unlock" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_screen_unlock"
        android:layout_marginTop="20dp"
        android:text="@string/def_hint" />

</RelativeLayout>